Linting e teste de navegação

--- a/index.html
+++ b/index.html
@@ -1,147 +1,149 @@
 <!DOCTYPE html>
 <html lang="pt">
+
   <head>
     <meta charset="utf-8">
     <title>FERKZE Fabio</title>
     <link rel="stylesheet" type="text/css" href="home.css">
     <link rel="icon" href="./images/langs/codeIcon1.png">
   </head>
+
   <body>
     <nav class="topnav">
       <a href="#titulo" class="bar-item"> <b>FERKZE</b> Fabio </a>
       <div class="items-right">
         <a href="#curriculo" class="bar-item"> Currículo </a>
         <a href="#titulo" class="bar-item"> Portfolio </a>
-        <a href="#titulo" class="bar-item"> Sobre Mim </a>
+        <a href="/about" class="bar-item"> Sobre Mim </a>
         <a href="#contato" class="bar-item"> Contato </a>
       </div>
     </nav>
     <div class="banner"></div>
     <main class="body">
       <section id="categories" class="categories">
-          <h1 id="titulo" class="title"> Desenvolvedor Full-Stack </h1>
-          <h2 class="subtitle"> Categorias da Página</h2>
-          <div class="category" id="curriculumBub">
-            <img src="./images/starIcon.png" alt="Curriculum">
-            <div class="description">
-              <h1><a href="#curriculum"> Currículo </a></h1>
-              <p> Diplomas, escolaridade, experiências, principais habilidades</p>
-            </div>
+        <h1 id="titulo" class="title"> Desenvolvedor Full-Stack </h1>
+        <h2 class="subtitle"> Categorias da Página</h2>
+        <div class="category" id="curriculumBub">
+          <img src="./images/starIcon.png" alt="Curriculum">
+          <div class="description">
+            <h1><a href="#curriculum"> Currículo </a></h1>
+            <p> Diplomas, escolaridade, experiências, principais habilidades</p>
           </div>
-          <div class="category" id="contactBub">
-            <img src="./images/talkIcon.png" alt="Contact">
-            <div class="description">
-              <h1><a href="#contact"> Contato </a></h1>
-              <p>Email, telefone, redes sociais e games.</p>
-            </div>
+        </div>
+        <div class="category" id="contactBub">
+          <img src="./images/talkIcon.png" alt="Contact">
+          <div class="description">
+            <h1><a href="#contact"> Contato </a></h1>
+            <p>Email, telefone, redes sociais e games.</p>
           </div>
-          <div class="category" id="portifolioBub">
-            <img src="./images/timeIcon.png" alt="Portifolio">
-            <div class="description">
-              <h1><a href="#portifolio"> Portfolio </a></h1>
-              <p>Em desenvolvimento.</p>
-            </div>
+        </div>
+        <div class="category" id="portifolioBub">
+          <img src="./images/timeIcon.png" alt="Portifolio">
+          <div class="description">
+            <h1><a href="#portifolio"> Portfolio </a></h1>
+            <p>Em desenvolvimento.</p>
           </div>
-          <div class="category" id="aboutmeBub">
-            <img src="./images/timeIcon.png" alt="About Me">
-            <div class="description">
-              <h1><a href="#aboutme"> Sobre Mim </a></h1>
-              <p>Em desenvolvimento.</p>
-            </div>
+        </div>
+        <div class="category" id="aboutmeBub">
+          <img src="./images/timeIcon.png" alt="About Me">
+          <div class="description">
+            <h1><a href="#aboutme"> Sobre Mim </a></h1>
+            <p>Em desenvolvimento.</p>
           </div>
+        </div>
       </section>
       <section class="curriculum">
-          <h1 id="curriculo" class="title">Meu Currículo</h1>
-          <article class="personal">
-            <img src="./images/meIcon.png" alt="Fabio">
-            <h2>Quem sou eu?</h2>
-            <ul>
-              <li style="list-style: none;">Fabio Gonçalves Martins</li>
-              <li style="list-style: none;">19 anos</li>
-              <li style="list-style: none;">Moro em São Paulo, Brasil</li>
-              <li style="list-style: none;">Desenvolvedor de Aplicações Web e Mobile desde 2017</li>
-            </ul>
-          </article>
-          <div class="skills">
-            <h2>Principais Habilidades</h2>
-            <h2>Tecnologias</h2>
-            <ul>
-              <li>
-                <img class="li-icon2" src="./images/langs/frontendIcon.jpg">
-                <span>Front-end</span>
-                <span class="obs">HTML5, CSS3, JS]</span>
-              </li>
-              <li>
-                <img class="li-icon2" src="./images/langs/vue.png">
-                <span>Vue.js</span>
-                <span class="obs">Front-end Framework</span>
-              </li>
-              <li>
-                <img class="li-icon2" src="./images/langs/node.png">
-                <span>Node.js</span>
-                <span class="obs">Server-side</span>
-              </li>
-              <li>
-                <img class="li-icon2" src="./images/langs/android.png">
-                <span>Android</span> 
-                <span class="obs">[<img class="li-icon" src="./images/langs/kotlin.png">Kotlin,
+        <h1 id="curriculo" class="title">Meu Currículo</h1>
+        <article class="personal">
+          <img src="./images/meIcon.png" alt="Fabio">
+          <h2>Quem sou eu?</h2>
+          <ul>
+            <li style="list-style: none;">Fabio Gonçalves Martins</li>
+            <li style="list-style: none;">19 anos</li>
+            <li style="list-style: none;">Moro em São Paulo, Brasil</li>
+            <li style="list-style: none;">Desenvolvedor de Aplicações Web e Mobile desde 2017</li>
+          </ul>
+        </article>
+        <div class="skills">
+          <h2>Principais Habilidades</h2>
+          <h2>Tecnologias</h2>
+          <ul>
+            <li>
+              <img class="li-icon2" src="./images/langs/frontendIcon.jpg">
+              <span>Front-end</span>
+              <span class="obs">HTML5, CSS3, JS]</span>
+            </li>
+            <li>
+              <img class="li-icon2" src="./images/langs/vue.png">
+              <span>Vue.js</span>
+              <span class="obs">Front-end Framework</span>
+            </li>
+            <li>
+              <img class="li-icon2" src="./images/langs/node.png">
+              <span>Node.js</span>
+              <span class="obs">Server-side</span>
+            </li>
+            <li>
+              <img class="li-icon2" src="./images/langs/android.png">
+              <span>Android</span>
+              <span class="obs">[<img class="li-icon" src="./images/langs/kotlin.png">Kotlin,
                 <img class="li-icon" src="./images/langs/java.png">Java]</span>
-              </li>
-              <li>
-                <img class="li-icon2" src="./images/langs/pythonIcon.jpg">
-                <span>Python</span>
-                <span class="obs">[Numpy, Matplotlib, Tensorflow]</span>
-              </li>
-              <li>
-                <img class="li-icon2" src="./images/langs/365.jpg">
-                <span>Office</span>
-              </li>
-            </ul>
-            <hr>
-            <h2>Idiomas</h2>
-            <ul>
-              <li>
-                <img class="li-icon" src="./images/flags/brazil.jpg">
-                <span>Português</span>
-              </li>
-              <li>
-                <img class="li-icon" src="./images/flags/uk.jpg">
-                <span>Inglês</span>
-              </li>
-              <li>
-                <img class="li-icon" src="./images/flags/spain.jpg">
-                <span>Espanhól</span>
-              </li>
-              <li>
-                <img class="li-icon" src="./images/flags/china.png">
-                <span>Chinês (Mandarim)</span>
-              </li>
-              <li>
-                <img class="li-icon" src="./images/flags/russia.jpg">
-                <span>Russo</span>
-              </li>
-            </ul>
+            </li>
+            <li>
+              <img class="li-icon2" src="./images/langs/pythonIcon.jpg">
+              <span>Python</span>
+              <span class="obs">[Numpy, Matplotlib, Tensorflow]</span>
+            </li>
+            <li>
+              <img class="li-icon2" src="./images/langs/365.jpg">
+              <span>Office</span>
+            </li>
+          </ul>
+          <hr>
+          <h2>Idiomas</h2>
+          <ul>
+            <li>
+              <img class="li-icon" src="./images/flags/brazil.jpg">
+              <span>Português</span>
+            </li>
+            <li>
+              <img class="li-icon" src="./images/flags/uk.jpg">
+              <span>Inglês</span>
+            </li>
+            <li>
+              <img class="li-icon" src="./images/flags/spain.jpg">
+              <span>Espanhól</span>
+            </li>
+            <li>
+              <img class="li-icon" src="./images/flags/china.png">
+              <span>Chinês (Mandarim)</span>
+            </li>
+            <li>
+              <img class="li-icon" src="./images/flags/russia.jpg">
+              <span>Russo</span>
+            </li>
+          </ul>
+        </div>
+        <article class="career">
+          <h2>Escolaridade</h2>
+          <div class="level">
+            <h3>Ensino Superior</h3>
+            <h4><a href="http://fatecsbc.edu.br">FATEC "Adib Moisés Dib" - São Bernardo do Campo</a></h4>
+            <p> <b>Curso:</b> Tecnologia em Informática para Negócios </p>
+            <p> <b>Situação: </b> Cursando - 5º Semestre</p>
+            <p> <b>Final Planejado: </b> Novembro de 2020</p>
           </div>
-          <article class="career">
-            <h2>Escolaridade</h2>
-            <div class="level">
-              <h3>Ensino Superior</h3>
-              <h4><a href="http://fatecsbc.edu.br">FATEC "Adib Moisés Dib" - São Bernardo do Campo</a></h4>
-              <p> <b>Curso:</b> Tecnologia em Informática para Negócios </p>
-              <p> <b>Situação: </b> Cursando - 5º Semestre</p>
-              <p> <b>Final Planejado: </b> Novembro de 2020</p>
-            </div>
-            <hr>
-            <div class="level">
-              <h3>Ensino Médio Integrado ao Técnico em Administração</h3>
-              <h4> <a href="http://www.etelg.com.br/">ETEC "Lauro Gomes"</a> </h4>
-              <p>  Concluído em Dezembro de 2017</p>
-            </div>
-            <hr>
-            <h2>Experiência de Trabalho <span class="obs">Coming soon</span></h2>
-            </p>
-            </div>
-          </article>
+          <hr>
+          <div class="level">
+            <h3>Ensino Médio Integrado ao Técnico em Administração</h3>
+            <h4> <a href="http://www.etelg.com.br/">ETEC "Lauro Gomes"</a> </h4>
+            <p> Concluído em Dezembro de 2017</p>
+          </div>
+          <hr>
+          <h2>Experiência de Trabalho <span class="obs">Coming soon</span></h2>
+          </p>
+          </div>
+        </article>
       </section>
       <section class="portifolio">
         <h1 id="portifolio" class="title">Portfolio - Em desenvolvimento</h1>
@@ -153,22 +155,31 @@
         <h1 id="contato" class="title">Contato</h1>
         <main>
           <ul>
-            <li> <h2>E-mail e Telefone</h2> </li>
-            <li> <img class="li-icon3" src="./images/media/gmail.jpg"> <b>E-mail: </b> ferkze@gmail.com </li>
+            <li>
+              <h2>Email e Telefone</h2>
+            </li>
+            <li> <img class="li-icon3" src="./images/media/gmail.jpg"> <b>Email: </b> ferkze@gmail.com </li>
             <li> <img class="li-icon3" src="./images/media/whatsapp.png"> <b>Whatsapp: </b> (11) 97757-0217</li>
             <li> <img class="li-icon3" src="./images/media/mobile.jpg"> <b>Celular: </b> +5511977570217</li>
           </ul>
           <ul>
-            <li><h2>Redes Sociais</h2></li>
-            <li> <a href="http://instagram.com/ferkze"> <img class="li-icon3" src="./images/media/insta.jpg"> <b>Instagram: </b> ferkze </a> </li>
+            <li>
+              <h2>Redes Sociais</h2>
+            </li>
+            <li> <a href="http://instagram.com/ferkze"> <img class="li-icon3" src="./images/media/insta.jpg">
+                <b>Instagram: </b> ferkze </a> </li>
             <li> <img class="li-icon3" src="./images/media/facebookdark.jpg"> <b>Facebook: </b> N/A </li>
             <li> <img class="li-icon3" src="./images/media/twitterdark.jpg"> <b>Twitter: </b> N/A </li>
             <li> <img class="li-icon3" src="./images/media/youtubedark.jpg"> <b>Youtube: </b> N/A </li>
           </ul>
           <ul>
-            <li> <h2>Comunidade</h2> </li>
-            <li> <a href="https://github.com/Ferkze/"> <img src="./images/media/github.png" class="li-icon3"> <b>GitHub Repository: </b> Ferkze </a> </li>
-            <li> <a href="https://stackoverflow.com/users/9870486/ferkze"><img src="./images/media/stackoverflow.jpg" class="li-icon3"> <b> Stack Overflow: </b> Ferkze </a> </li>
+            <li>
+              <h2>Comunidade</h2>
+            </li>
+            <li> <a href="https://github.com/Ferkze/"> <img src="./images/media/github.png" class="li-icon3"> <b>GitHub
+                  Repository: </b> Ferkze </a> </li>
+            <li> <a href="https://stackoverflow.com/users/9870486/ferkze"><img src="./images/media/stackoverflow.jpg"
+                  class="li-icon3"> <b> Stack Overflow: </b> Ferkze </a> </li>
           </ul>
         </main>
       </section>
@@ -179,4 +190,5 @@
       <h3>Se você está vendo pelo celular... Paciência! Ainda estou estudando para criar designs responsivos e elegantes</h3>
     </footer> -->
   </body>
+
 </html>
