Adicionado desabilitação de seções não desenvolvidas

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
   <body>
     <nav class="topnav">
-      <a href="#titulo" class="bar-item"> <b>FERKZE</b> Fabio </a>
+      <a href="#titulo" class="bar-title"> <b>FERKZE</b> Fabio </a>
       <div class="items-right">
         <a href="#curriculo" class="bar-item"> Currículo </a>
-        <a href="#titulo" class="bar-item"> Portfolio </a>
-        <a href="/about" class="bar-item"> Sobre Mim </a>
         <a href="#contato" class="bar-item"> Contato </a>
+        <a href="javascript:void(0)" class="bar-item-disabled"> Portfolio </a>
+        <a href="javascript:void(0)" class="bar-item-disabled"> Sobre Mim </a>
       </div>
     </nav>
     <div class="banner"></div>
@@ -37,14 +37,14 @@
             <p>Email, telefone, redes sociais e games.</p>
           </div>
         </div>
-        <div class="category" id="portifolioBub">
-          <img src="./images/timeIcon.png" alt="Portifolio">
+        <div class="category category-disabled" id="portifolioBub">
+          <img src="./images/timeIcon.png" alt="Portfolio">
           <div class="description">
             <h1><a href="#portifolio"> Portfolio </a></h1>
             <p>Em desenvolvimento.</p>
           </div>
         </div>
-        <div class="category" id="aboutmeBub">
+        <div class="category category-disabled" id="aboutmeBub">
           <img src="./images/timeIcon.png" alt="About Me">
           <div class="description">
             <h1><a href="#aboutme"> Sobre Mim </a></h1>
