Atualização de informações técnicas

--- a/index.html
+++ b/index.html
@@ -71,32 +71,48 @@
             <li>
               <img class="li-icon2" src="./images/langs/frontendIcon.jpg">
               <span>Front-end</span>
-              <span class="obs">HTML5, CSS3, JS]</span>
+              <span class="obs">HTML5, CSS3, JS</span>
             </li>
             <li>
               <img class="li-icon2" src="./images/langs/vue.png">
               <span>Vue.js</span>
-              <span class="obs">Front-end Framework</span>
+            </li>
+            <li>
+              <img class="li-icon2" src="./images/langs/angular.png">
+              <span>Angular</span>
+            </li>
+            <li>
+              <img class="li-icon2" src="./images/langs/typescript.png">
+              <span>Typescript</span>
             </li>
             <li>
               <img class="li-icon2" src="./images/langs/node.png">
               <span>Node.js</span>
-              <span class="obs">Server-side</span>
-            </li>
-            <li>
-              <img class="li-icon2" src="./images/langs/android.png">
-              <span>Android</span>
-              <span class="obs">[<img class="li-icon" src="./images/langs/kotlin.png">Kotlin,
-                <img class="li-icon" src="./images/langs/java.png">Java]</span>
             </li>
             <li>
               <img class="li-icon2" src="./images/langs/pythonIcon.jpg">
               <span>Python</span>
-              <span class="obs">[Numpy, Matplotlib, Tensorflow]</span>
+              <span class="obs">Flask, Numpy, Matplotlib, Tensorflow</span>
             </li>
             <li>
-              <img class="li-icon2" src="./images/langs/365.jpg">
-              <span>Office</span>
+              <img class="li-icon2" src="./images/langs/android.png">
+              <span>Android</span>
+              <span class="obs">
+                <img class="li-icon" src="./images/langs/kotlin.png">Kotlin,
+                <img class="li-icon" src="./images/langs/java.png">Java
+              </span>
+            </li>
+          </ul>
+          <hr>
+          <h2>Ferramentas</h2>
+          <ul>
+            <li>
+              <img class="li-icon2" src="./images/langs/docker.png">
+              <span>Docker containers</span>
+            </li>
+            <li>
+              <img class="li-icon2" src="./images/langs/atlassian.png">
+              <span>Atlassian (Jira, Bitbucket)</span>
             </li>
           </ul>
           <hr>
@@ -111,38 +127,33 @@
               <span>Inglês</span>
             </li>
             <li>
-              <img class="li-icon" src="./images/flags/spain.jpg">
-              <span>Espanhól</span>
-            </li>
-            <li>
               <img class="li-icon" src="./images/flags/china.png">
               <span>Chinês (Mandarim)</span>
             </li>
             <li>
-              <img class="li-icon" src="./images/flags/russia.jpg">
-              <span>Russo</span>
+              <img class="li-icon" src="./images/flags/spain.jpg">
+              <span>Espanhól</span>
             </li>
           </ul>
         </div>
         <article class="career">
           <h2>Escolaridade</h2>
           <div class="level">
-            <h3>Ensino Superior</h3>
+            <h3>Superior em Tecnologia em Informática para Negócios</h3>
             <h4><a href="http://fatecsbc.edu.br">FATEC "Adib Moisés Dib" - São Bernardo do Campo</a></h4>
-            <p> <b>Curso:</b> Tecnologia em Informática para Negócios </p>
             <p> <b>Situação: </b> Cursando - 5º Semestre</p>
-            <p> <b>Final Planejado: </b> Novembro de 2020</p>
+            <p> <b>Final Planejado: </b> Dezembro de 2020</p>
           </div>
           <hr>
           <div class="level">
             <h3>Ensino Médio Integrado ao Técnico em Administração</h3>
             <h4> <a href="http://www.etelg.com.br/">ETEC "Lauro Gomes"</a> </h4>
-            <p> Concluído em Dezembro de 2017</p>
+            <p> <b>Situação: </b> Concluído em Dezembro de 2017</p>
           </div>
           <hr>
+          <br>
           <h2>Experiência de Trabalho <span class="obs">Coming soon</span></h2>
-          </p>
-          </div>
+          <br>
         </article>
       </section>
       <section class="portifolio">
