Introdução do CSS Grid

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
   <head>
     <meta charset="utf-8">
-    <title>FERKZE Fabio</title>
+    <title>FABIO Ferkze</title>
     <link rel="stylesheet" type="text/css" href="home.css">
     <link rel="icon" href="./images/langs/codeIcon1.png">
   </head>
 
   <body>
     <nav class="topnav">
-      <a href="#titulo" class="bar-title"> <b>FERKZE</b> Fabio </a>
+      <a href="#titulo" class="bar-title"> <b>FABIO</b> Ferkze </a>
       <div class="items-right">
         <a href="#curriculo" class="bar-item"> Currículo </a>
         <a href="#contato" class="bar-item"> Contato </a>
@@ -21,7 +21,7 @@
     <div class="banner"></div>
     <main class="body">
       <section id="categories" class="categories">
-        <h1 id="titulo" class="title"> Desenvolvedor Full-Stack </h1>
+        <h1 id="titulo" class="title"> Software Developer </h1>
         <h2 class="subtitle"> Categorias da Página</h2>
         <div class="category" id="curriculumBub">
           <img src="./images/starIcon.png" alt="Curriculum">
@@ -37,134 +37,135 @@
             <p>Email, telefone, redes sociais e games.</p>
           </div>
         </div>
-        <div class="category category-disabled" id="portifolioBub">
+        <div class="category category-disabled" id="portfolioBub">
           <img src="./images/timeIcon.png" alt="Portfolio">
           <div class="description">
-            <h1><a href="#portifolio"> Portfolio </a></h1>
-            <p>Em desenvolvimento.</p>
+            <h1><a href="#portfolio"> Portfolio </a></h1>
+            <p>Desativado</p>
           </div>
         </div>
         <div class="category category-disabled" id="aboutmeBub">
           <img src="./images/timeIcon.png" alt="About Me">
           <div class="description">
             <h1><a href="#aboutme"> Sobre Mim </a></h1>
-            <p>Em desenvolvimento.</p>
+            <p>Desativado</p>
           </div>
         </div>
       </section>
       <section class="curriculum">
         <h1 id="curriculo" class="title">Meu Currículo</h1>
-        <article class="personal">
-          <img src="./images/meIcon.png" alt="Fabio">
-          <h2>Quem sou eu?</h2>
-          <ul>
-            <li style="list-style: none;">Fabio Gonçalves Martins</li>
-            <li style="list-style: none;">19 anos</li>
-            <li style="list-style: none;">Moro em São Paulo, Brasil</li>
-            <li style="list-style: none;">Desenvolvedor de Aplicações Web e Mobile desde 2017</li>
-          </ul>
-        </article>
-        <div class="skills">
-          <h2>Principais Habilidades</h2>
-          <h2>Tecnologias</h2>
-          <ul>
-            <li>
-              <img class="li-icon2" src="./images/langs/frontendIcon.jpg">
-              <span>Front-end</span>
-              <span class="obs">HTML5, CSS3, JS</span>
-            </li>
-            <li>
-              <img class="li-icon2" src="./images/langs/vue.png">
-              <span>Vue.js</span>
-            </li>
-            <li>
-              <img class="li-icon2" src="./images/langs/angular.png">
-              <span>Angular</span>
-            </li>
-            <li>
-              <img class="li-icon2" src="./images/langs/typescript.png">
-              <span>Typescript</span>
-            </li>
-            <li>
-              <img class="li-icon2" src="./images/langs/node.png">
-              <span>Node.js</span>
-            </li>
-            <li>
-              <img class="li-icon2" src="./images/langs/pythonIcon.jpg">
-              <span>Python</span>
-              <span class="obs">Flask, Numpy, Matplotlib, Tensorflow</span>
-            </li>
-            <li>
-              <img class="li-icon2" src="./images/langs/android.png">
-              <span>Android</span>
-              <span class="obs">
-                <img class="li-icon" src="./images/langs/kotlin.png">Kotlin,
-                <img class="li-icon" src="./images/langs/java.png">Java
-              </span>
-            </li>
-          </ul>
-          <hr>
-          <h2>Ferramentas</h2>
-          <ul>
-            <li>
-              <img class="li-icon2" src="./images/langs/docker.png">
-              <span>Docker containers</span>
-            </li>
-            <li>
-              <img class="li-icon2" src="./images/langs/atlassian.png">
-              <span>Atlassian (Jira, Bitbucket)</span>
-            </li>
-          </ul>
-          <hr>
-          <h2>Idiomas</h2>
-          <ul>
-            <li>
-              <img class="li-icon" src="./images/flags/brazil.jpg">
-              <span>Português</span>
-            </li>
-            <li>
-              <img class="li-icon" src="./images/flags/uk.jpg">
-              <span>Inglês</span>
-            </li>
-            <li>
-              <img class="li-icon" src="./images/flags/china.png">
-              <span>Chinês (Mandarim)</span>
-            </li>
-            <li>
-              <img class="li-icon" src="./images/flags/spain.jpg">
-              <span>Espanhól</span>
-            </li>
-          </ul>
+        <div class="grid-container">
+          <div class="skills">
+            <h2>Principais Habilidades</h2>
+            <h3>Tecnologias</h3>
+            <ul>
+              <li>
+                <img class="li-icon2" src="./images/langs/java.png">
+                <span>Java</span>
+                <span class="obs">
+                  <img class="li-icon" src="./images/langs/spring.svg">Spring
+                </span>
+              </li>
+              <li>
+                <img class="li-icon2" src="./images/langs/go.png">
+                <span>Go</span>
+              </li>
+              <li>
+                <img class="li-icon2" src="./images/langs/node.png">
+                <span>Node.js</span>
+              </li>
+              <li>
+                <img class="li-icon2" src="./images/langs/pythonIcon.jpg">
+                <span>Python</span>
+                <span class="obs">Flask, Numpy, Matplotlib, Tensorflow</span>
+              </li>
+              <li>
+                <img class="li-icon2" src="./images/langs/angular.png">
+                <span>Angular</span>
+              </li>
+              <li>
+                <img class="li-icon2" src="./images/langs/vue.png">
+                <span>Vue.js</span>
+              </li>
+              <li>
+                <img class="li-icon2" src="./images/langs/typescript.png">
+                <span>TypeScript</span>
+              </li>
+            </ul>
+            <hr>
+            <h3>Ferramentas</h3>
+            <ul>
+              <li>
+                <img class="li-icon2" src="./images/langs/docker.png">
+                <span>Docker containers</span>
+              </li>
+              <li>
+                <img class="li-icon2" src="./images/langs/atlassian.png">
+                <span>Atlassian (Jira, Bitbucket)</span>
+              </li>
+            </ul>
+            <hr>
+            <h3>Idiomas</h3>
+            <ul>
+              <li>
+                <img class="li-icon" src="./images/flags/brazil.jpg">
+                <span>Português</span>
+              </li>
+              <li>
+                <img class="li-icon" style="max-width: 16px;" src="./images/flags/uk.jpg">
+                <span>Inglês</span>
+              </li>
+              <li>
+                <img class="li-icon" src="./images/flags/china.png">
+                <span>Chinês (Mandarim)</span>
+              </li>
+              <li>
+                <img class="li-icon" src="./images/flags/spain.jpg">
+                <span>Espanhól</span>
+              </li>
+            </ul>
+          </div>
+          <article class="personal">
+            <img src="./images/meIcon.png" alt="Fabio">
+            <h2>Quem sou eu?</h2>
+            <ul>
+              <li>Fabio Gonçalves Martins</li>
+              <li>20 anos</li>
+              <li>Moro em São Paulo, Brasil</li>
+              <li>Desenvolvedor de Software Web e Mobile desde 2017</li>
+            </ul>
+          </article>
+          <article class="career">
+            <h2>Escolaridade</h2>
+            <div class="level">
+              <h3>Superior em Tecnologia em Informática para Negócios</h3>
+              <h4><a href="http://fatecsbc.edu.br">FATEC "Adib Moisés Dib" - São Bernardo do Campo</a></h4>
+              <p> <b>Situação: </b> Cursando - 5º Semestre</p>
+              <p> <b>Final Planejado: </b> Dezembro de 2020</p>
+            </div>
+            <hr>
+            <div class="level">
+              <h3>Ensino Médio Integrado ao Técnico em Administração</h3>
+              <h4> <a href="http://www.etelg.com.br/">ETEC "Lauro Gomes"</a> </h4>
+              <p> <b>Situação: </b> Concluído em Dezembro de 2017</p>
+            </div>
+            <hr>
+            <br>
+            <h2>Experiências Profissionais <span class="obs">Coming soon</span></h2>
+            <br>
+          </article>
+
         </div>
-        <article class="career">
-          <h2>Escolaridade</h2>
-          <div class="level">
-            <h3>Superior em Tecnologia em Informática para Negócios</h3>
-            <h4><a href="http://fatecsbc.edu.br">FATEC "Adib Moisés Dib" - São Bernardo do Campo</a></h4>
-            <p> <b>Situação: </b> Cursando - 5º Semestre</p>
-            <p> <b>Final Planejado: </b> Dezembro de 2020</p>
-          </div>
-          <hr>
-          <div class="level">
-            <h3>Ensino Médio Integrado ao Técnico em Administração</h3>
-            <h4> <a href="http://www.etelg.com.br/">ETEC "Lauro Gomes"</a> </h4>
-            <p> <b>Situação: </b> Concluído em Dezembro de 2017</p>
-          </div>
-          <hr>
-          <br>
-          <h2>Experiência de Trabalho <span class="obs">Coming soon</span></h2>
-          <br>
-        </article>
       </section>
-      <section class="portifolio">
-        <h1 id="portifolio" class="title">Portfolio - Em desenvolvimento</h1>
+      <section class="portfolio">
+        <h1 id="portfolio" class="title">Portfolio – Desativado</h1>
       </section>
       <section>
-        <h1 id="sobremim" class="title">Sobre Mim - em desenvolvimento</h1>
+        <h1 id="sobremim" class="title">Sobre Mim – Desativado</h1>
       </section>
       <section class="contact">
         <h1 id="contato" class="title">Contato</h1>
-        <main>
+        <div class="d-flex">
           <ul>
             <li>
               <h2>Email e Telefone</h2>
@@ -179,9 +180,9 @@
             </li>
             <li> <a href="http://instagram.com/ferkze"> <img class="li-icon3" src="./images/media/insta.jpg">
                 <b>Instagram: </b> ferkze </a> </li>
-            <li> <img class="li-icon3" src="./images/media/facebookdark.jpg"> <b>Facebook: </b> N/A </li>
-            <li> <img class="li-icon3" src="./images/media/twitterdark.jpg"> <b>Twitter: </b> N/A </li>
-            <li> <img class="li-icon3" src="./images/media/youtubedark.jpg"> <b>Youtube: </b> N/A </li>
+            <li> <a href="https://www.linkedin.com/in/ferkze/" target="_blank" rel="noopener noreferrer"><img
+                  class="li-icon3" src="./images/media/linkedin.png"> <b>LinkedIn: </b> Fabio Martins</a>
+            </li>
           </ul>
           <ul>
             <li>
@@ -192,7 +193,7 @@
             <li> <a href="https://stackoverflow.com/users/9870486/ferkze"><img src="./images/media/stackoverflow.jpg"
                   class="li-icon3"> <b> Stack Overflow: </b> Ferkze </a> </li>
           </ul>
-        </main>
+        </div>
       </section>
     </main>
     <!-- <footer>
